# loft

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  TESTING_PLAN.md  crane.nix  devenv.nix  flake.nix  plan.md  treefmt.toml
.github/workflows/: ci.yml
nix/: cache-test.nix
nix-bindings/: Cargo.toml  LICENSE  README.md
nix-bindings/nix-bindings/: Cargo.toml  README.md
nix-bindings/nix-bindings-sys/: Cargo.toml  README.md  build.rs  lib.rs
nix-bindings/nix-bindings-sys/examples/: eval_basic.rs  eval_construct.rs  eval_function.rs  flake_basic.rs  version.rs
nix-bindings/nix-bindings-sys/include/: wrapper.h
nix-bindings/nix-bindings-sys/tests/: eval.rs  flake.rs  memory.rs  primop.rs  store.rs  util.rs
nix-bindings/nix-bindings/src/: attrs.rs  external.rs  flake.rs  lib.rs  lists.rs  primop.rs  store.rs
nix-bindings/nix-bindings/tests/: integration.rs
nixos/: module.nix
nixos/tests/: extra-headers.nix  integration.nix
src/: cache_checker.rs  config.rs  hash.rs  lib.rs  local_cache.rs  main.rs  nix-store-watcher.rs  nix-utils.rs  nix_store.rs  nix_store_watcher.rs  nix_utils.rs  pruner.rs  s3-uploader.rs  s3_uploader.rs  signing.rs
src/nix_manifest/: deserializer.rs  mod.rs  serializer.rs
