[package]
name = "loft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.3"
aws-sdk-s3 = "1.40.0"
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
notify = "6.1.1"
serde = { version = "1.0.203", features = ["derive"] }
tempfile = "3.21.0"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
tokio-rustls = "0.26.0"

