[package]
name = "loft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.3"
aws-sdk-s3 = "1.40.0"
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
notify = "6.1.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.21.0"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
attic = { git = "https://github.com/zhaofengli/attic", branch = "main" }
displaydoc = "0.2.5"
itoa = "1.0.11"
ryu = "1.0.17"
serde_with = "3.14.0"
ed25519-compact = "2.1.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
http = "0.2"
xz2 = "0.1.0"
sha2 = "0.10.8"
hex = "0.4.3"


