[workspace]
members  = [ "nix-bindings", "nix-bindings-sys" ]
resolver = "3"

[workspace.package]
description  = "Rust binding for Nix, the build tool"
edition      = "2024"
license      = "MIT"
readme       = true
repository   = "https://github.com/notashelf/nix-bindings"
rust-version = "1.90.0"
version      = "0.2347.1"

[workspace.dependencies]
nix-bindings-sys = { path = "./nix-bindings-sys", version = "0.2347.1" }

bindgen         = { default-features = false, features = [ "logging", "runtime" ], version = "0.72.1" }
cc              = "1.2.62"
doxygen-bindgen = "0.1.3"
pkg-config      = "0.3.33"
serial_test     = "3.4.0"
tempfile        = "3.27.0"

# Building bindgen with optimizations makes the build script run faster, more
# than it is offset by the additional build time added to the crate itself by
# enabling optimizations. Since we work with bindgen, might as well.
# P.S.: it ranges from 3x to 5x faster depending on my system, and it'll only
# get better as the C API expands in size. So all things considered this is a
# good thing :)
[profile.dev.package.bindgen]
opt-level = 3
